# bulin-strategy

./: .env.example  .gitignore  AGENTS.md  pyproject.toml
configs/: live_hyperliquid_testnet.yaml  strategy_bbmr_trailing_stop_v1.yaml  strategy_bbmr_v3_2.yaml
docs/: repository_audit.md
docs/project_notes/: bugs.md  decisions.md  issues.md  key_facts.md  zone_operating_model.md
docs/strategy_consensus/: bbmr_trailing_stop_v1.md
frontend/: README.md  package-lock.json  package.json
frontend/app/: flow-data.ts  globals.css  layout.tsx  page.tsx
frontend/tests/: rendered-html.test.mjs
frontend/worker/: index.ts
scripts/: hyperliquid_acceptance.py  hyperliquid_rsi_calibration.py  live_safety_journal.py
src/bbmr/: __init__.py  add_rules.py  backtest_orders.py  config.py  decision_engine.py  entry_confirmation.py  event_logger.py  exit_rules.py  indicators.py  market_state.py  risk.py  signals.py  sizing.py  state_machine.py  storage.py  symbols.py  trade_models.py  trailing.py  trailing_features.py
tests/: test_add_rules.py  test_backtest_orders.py  test_config.py  test_decision_engine.py  test_entry_confirmation.py  test_exit_rules.py  test_indicators.py  test_market_state.py  test_risk.py  test_signals.py  test_state_machine.py  test_storage.py  test_symbols.py
tests/backtest/: test_alignment.py  test_cli.py  test_data.py  test_event_loop.py  test_features.py  test_ledger.py  test_trailing_event_loop.py  test_trailing_portfolio_event_loop.py
tests/live/: test_dashboard.py  test_env.py  test_hyperliquid_acceptance.py  test_hyperliquid_client.py  (+8 more)
(+31 files in other folders)
